# tax-file

./: .env  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
.sqlx/: query-5ae058b504f012209b840d97fd405e0f24df67a74976763c026eb2fa74667098.json  query-66f36c016fd62a4dbc7228ec2f5330f58aa7a0612c911c81fc5f6a2bcbc10720.json  query-810b428f1f3c67291a834d28e3d57ed18c9d3e16cbe0b1a5ae7cb10b1b27318b.json  query-c206b34ac2c1acad7480f4071602d4703795d2585c88222058844ef6bcf22976.json  query-c24bc8164a41af0d34a63c0e7bcf6adf31c16504d80bbd19d6116b43b08e3e96.json  query-dc336733ad0736e447c4c0142543a5926d12b08b5cb61814b9a567353dd51306.json  query-eb4f1b09c3ff92f06ab43a8be93caad412c7864ea9c899e4ca300eaa719c9000.json
frontend/: nuxt.config.ts  package-lock.json  package.json
frontend/.nuxt/: imports.d.ts  nitro.json  nuxt.json  tsconfig.server.json
frontend/.output/: nitro.json
frontend/composables/: useAuth.ts
frontend/layouts/: default.vue
frontend/pages/: dashboard.vue  index.vue  login.vue  register.vue
scripts/: migration.sh
src/: config.rs  main.rs
src/controllers/: mod.rs
src/middlewares/: auth_middleware.rs
src/migrations/: 20250203165755_create_countries_table.down.sql  20250203165755_create_countries_table.up.sql  20250203165845_create_states_table.down.sql  20250203165845_create_states_table.up.sql  20250203165847_create_addresses_table.down.sql  20250203165847_create_addresses_table.up.sql  20251016175919_create_users_table.down.sql  20251016175919_create_users_table.up.sql  20260215030301_create_tax_tables.down.sql  (+1 more)
(+55 files in other folders)
